...
          }}
        />
        <Tabs.Screen
          name="trash"
          options={{
            title: t('drive.trash'),
            tabBarButtonTestID: 'tab-trash',
            tabBarIcon: ({ color }) => (
              <CozyIcon name="trashOutline" color={color} size={TAB_ICON_SIZE} />
            )
          }}
        />
        <Tabs.Screen name="search" options={{ href: null }} />
...
